--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <body>
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-10 main-title">
+        
+         <div class="col-md-10 main-title">
+          <img src="/static/Black logo - no background.png" alt="logo" class="logo">
           <h1>Website</h1>
           <h2>under construction</h2>
         </div>
@@ -249,7 +251,7 @@
     </div>
       <footer class="footer">
         <div class="container text-center">
-          <span>your-website-name.com</span>
+          <span>www.droneworks.it/</span>
         </div>
       </footer>
 
